add find games, formalization