@@ -26,20 +26,16 @@ import ru.aston.gamerent.repository.WalletRepository;
 import ru.aston.gamerent.service.AccountService;
 import ru.aston.gamerent.service.mapper.AccountMapper;
 import ru.aston.gamerent.service.util.AccountValidator;
-
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class AccountServiceImpl implements AccountService {
-
     private final AccountRepository accountRepository;
     private final UserRepository userRepository;
     private final OrderRepository orderRepository;
@@ -146,6 +142,7 @@ public class AccountServiceImpl implements AccountService {
     private List<ActiveAccountResponse> getAccountsPasswords(List<Account> accounts) {
         return accounts.stream().map(accountMapper::accountToActiveAccountResponse).toList();
     }
+
     @Override
     @Transactional
     public Account getAccountById(long id) {
@@ -164,7 +161,7 @@ public class AccountServiceImpl implements AccountService {
     public int numberOfAvailableAccounts(Long gameId){
         return accountRepository.findByGameId(gameId).stream()
                 .filter(account -> account.getExpirationTime().isBefore(LocalDateTime.now()))
-                .collect(Collectors.toList()).size();
+                .toList()
+                .size();
     }
-
 }
